SOC-1914 | fix: remove red border on firefox when message textarea is empty, but requried

--- a/front/main/app/styles/component/_discussion-inline-editor.scss
+++ b/front/main/app/styles/component/_discussion-inline-editor.scss
@@ -130,6 +130,11 @@ $success-icon-size: 80px;
 	}
 
 	.discussion-inline-editor-textarea {
+
+		&:invalid {
+			box-shadow: none;
+		}
+
 		&:focus {
 			border: 0;
 		}
